# Criminal-Intelligence-Platform-

./: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.api  Dockerfile.worker
es_mappings/: master_person.json  normalized_person.json  relationship_events.json  relationships.json
k8s/: api-deployment.yaml  namespace.yaml  worker-deployment.yaml
k8s/configmaps/: config.yaml
scripts/: bootstrap_indices.py  run_historical_batch.py
src/api/: main.py  models.py
src/batch/: checkpoint.py  historical_processor.py
src/core/: config.py  elasticsearch.py  kafka.py  logging.py
src/entity_resolution/: candidate_retriever.py  merger.py  pipeline.py  scorer.py
src/graph_intelligence/: network_analyzer.py  risk_scorer.py
src/normalization/: address_normalizer.py  blocking.py  fir_normalizer.py  name_normalizer.py  phone_normalizer.py  pipeline.py
src/relationships/: generator.py
src/workers/: normalization_worker.py  relationship_worker.py  resolution_worker.py
tests/: test_entity_resolution.py  test_normalization.py
