[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "person-network-analysis"
version = "1.0.0"
description = "Criminal Intelligence Network Analysis Platform"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",

    # Elasticsearch
    "elasticsearch[async]>=8.13.0",

    # Kafka
    "aiokafka>=0.10.0",

    # Data processing
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "orjson>=3.10.0",

    # NLP / Transliteration
    "indic-transliteration>=2.3.57",
    "metaphone>=0.6",
    "jellyfish>=1.0.3",
    "python-Levenshtein>=0.25.0",
    "networkx>=3.3",
    "python-louvain>=0.16",
    "phonenumbers>=8.13.36",
    "unidecode>=1.3.8",

    # Async / Concurrency
    "anyio>=4.3.0",
    "tenacity>=8.3.0",

    # Caching / State
    "redis[hiredis]>=5.0.4",

    # Logging / Observability
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "rich>=13.7.1",
    "tqdm>=4.66.2",
    "uuid7>=0.1.0",
    "pendulum>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
